use --enable-preview
I wanted to try valhalla. It works with these java/javac flags I
added. But using the value keyword makes intellij crap itself. So I
won't be committing any such changes, but I will leave these options
in place so I can mess around with valhalla easily.